- Make it possible to update settings through API (only "storeResponses" for now) (https://github.com/dukeofharen/httplaceholder/pull/286).
- Added option to set "storeResponses" in UI (https://github.com/dukeofharen/httplaceholder/pull/286).
- Fixed bug where a lot of file watches were placed which were not necessary (https://github.com/dukeofharen/httplaceholder/pull/289).

# BREAKING CHANGES
- Stubs defined in a .yml file should ALWAYS have an id field defined, whereas it was automatically generated beforehand if it was not set (which caused some non stub files to get parsed as stub with weird behavior).

[2022.10.4]
- Fixed bug where passing "extraDuration" as integer in JSON would throw an exception (https://github.com/dukeofharen/httplaceholder/issues/281).

[2022.10.2]
- If stub is executed, return "X-HttPlaceholder-ExecutedStub" header with stub ID (https://github.com/dukeofharen/httplaceholder/pull/269).
- Show the configuration as "read only" values in the user interface (https://github.com/dukeofharen/httplaceholder/issues/261).
- Fixed bug where "headersSize" in "request" in HAR can not be null (https://github.com/dukeofharen/httplaceholder/issues/271).
- Install scripts do not have to be called as sudo (https://github.com/dukeofharen/httplaceholder/pull/272).
- Added stub request validation to .NET client (https://github.com/dukeofharen/httplaceholder/pull/279).

[2022.9.3]
- Fixed link to API docs (https://github.com/dukeofharen/httplaceholder/pull/256).
- The YAML file stub contents are no longer logged when there are any YAML stub files and the logging is set to verbose (https://github.com/dukeofharen/httplaceholder/pull/256).
- When setting verbose logging on with environment variable, it now also logs the configuration (https://github.com/dukeofharen/httplaceholder/pull/256).